# Amazon-Chess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: imageResources.qrc
saves/: data1.txt  untitled.txt
src/: main.cpp
src/AI/: MCTS.cpp  MCTS.hpp  MCTS2.cpp  MCTS2.hpp
src/GUI/: ChessBoard.cpp  ChessBoard.hpp  ChessBoardView.cpp  ChessBoardView.hpp  ChessGrid.cpp  ChessGrid.hpp  ChessWindow.cpp  ChessWindow.hpp  GameMenu.cpp  GameMenu.hpp  OnePlayer.cpp  OnePlayer.hpp  Settings.cpp  Settings.hpp  StyleSheets.cpp  StyleSheets.hpp  TwoPlayer.cpp  TwoPlayer.hpp
src/GameCore/: Board.cpp  Board.hpp  GameEngine.cpp  GameEngine.hpp  GameState.hpp  Gamestate.cpp  move.cpp  move.hpp
